--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello，Rainyday</title>
     <style>
         body{
-            verflow: hidden;
+            overflow: hidden;
             height: 100%;
             margin: 0;
             padding: 0;
